[package]
name = "rust_casino"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.9.2"
sha2 = "0.10.9"
tokio = {version = "1.48.0", features = ["full"]}
serde_json = {version = "1.0.145"}
axum = {version = "0.8.7", features = ["ws"]}
chrono = "0.4.42"
tower = "0.5"
futures = "0.3"
